--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,5 +1,22 @@
-<footer class="py-60 bg-black">
-  <div class="container text-white">
-    footer
+<footer class="py-40 py-lg-48 bg-white">
+  <div class="container">
+    <div class="row px-40 px-lg-0">
+      <div class="col-12 col-lg-5">
+        <a class="d-block ff-shrikhand fs-32 text-black font-italic p-0" href="index.html">ALPHABOX+</a>
+        <span class="fw-bold d-none d-lg-block">Copyright © 2023 Hexschool.</span>
+      </div>
+      <div class="col-12 col-lg-2 mb-8 mb-lg-0">
+        <img src="/assets/images/icons/emergency_b.svg" alt="emergency_b">
+      </div>
+      <div class="col-12 col-lg-5 text-end align-self-center">
+        <ul class="list-unstyled d-flex flex-column justify-content-end flex-lg-row align-items-start ">
+          <li class="mb-8 mb-lg-0"><a class="text-black pe-lg-12" href="#">關於我們</a></li>
+          <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="#">產品資訊</a></li>
+          <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="#">聯絡我們</a></li>
+          <li class="mb-8 mb-lg-0"><a class="text-black ps-lg-12" href="#">隱私政策</a></li>
+        </ul>
+      </div>
+      <span class="fw-bold d-block d-lg-none">Copyright © 2023 Hexschool.</span>
+    </div>
   </div>
 </footer>
