--- a/assets/scss/base/_font.scss
+++ b/assets/scss/base/_font.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700;900&family=Saira+Extra+Condensed:wght@300&family=Shrikhand&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@300&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
@@ -9,4 +10,8 @@
 
 .ff-shrikhand{
   font-family: 'Shrikhand', cursive;
+}
+
+.ff-saira{
+  font-family: 'Saira Condensed', sans-serif;
 }
