--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -299,7 +299,12 @@ $cyans: (
 
 // scss-docs-start theme-color-variables
 $primary:       #7000FF; //$blue !default; custom
-$secondary:     $black !default;
+$primary-1:     #6E01F8;
+$primary-2:     #380C7E;
+$primary-3:     #1F0F39;
+$primary-4:     #E9E2F3;
+$primary-5:     #28085C;
+$secondary:     #11002D; //$gray-600 !default; custom
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
@@ -312,13 +317,18 @@ $dark:          $gray-800 !default;
 // scss-docs-start theme-colors-map
 $theme-colors: (
   "primary":    $primary,
+  "primary-1":  $primary-1,
+  "primary-2":  $primary-2,
+  "primary-3":  $primary-3,
+  "primary-4":  $primary-4,
+  "primary-5":  $primary-5,
   "secondary":  $secondary,
   "success":    $success,
   "info":       $info,
   "warning":    $warning,
   "danger":     $danger,
   "light":      $light,
-  "gray-600":   $gray-600,
+  "gray":       $gray-600,
   "dark":       $dark
 ) !default;
 // scss-docs-end theme-colors-map
@@ -371,7 +381,7 @@ $escaped-characters: (
 // Quickly modify global styling by enabling or disabling optional features.
 
 $enable-caret:                true !default;
-$enable-rounded:              true !default;
+$enable-rounded:              false; //true !default;
 $enable-shadows:              false !default;
 $enable-gradients:            false !default;
 $enable-transitions:          true !default;
@@ -425,6 +435,7 @@ $spacers: (
   18: $spacer * 1.125, //18px,
   20: $spacer * 1.25,  //20px,
   24: $spacer * 1.5,   //24px,
+  28: $spacer * 1.75,   //24px,
   30: $spacer * 1.875, //30px,
   32: $spacer * 2,     //32px,
   36: $spacer * 2.25,  //36px,
@@ -435,7 +446,14 @@ $spacers: (
   60: $spacer * 3.75,  //60px,
   64: $spacer * 4,     //64px,
   72: $spacer * 4.5,   //72px,
+  76: $spacer * 4.75,  //76px,
+  80: $spacer * 5,     //80px,
   96: $spacer * 6,     //96px,
+  128: $spacer * 8,    //128px,
+  136: $spacer * 8.5,  //136px,
+  144: $spacer * 9,    //144px,
+  160: $spacer * 10,   //160px,
+  400: $spacer * 25,   //400px,
 ) !default;
 // scss-docs-end spacer-variables-maps
 
@@ -456,8 +474,8 @@ $position-values: (
 // Settings for the `<body>` element.
 
 $body-text-align:           null !default;
-$body-color:                $black !default; //$gray-900 !default; custom
-$body-bg:                   $white !default;
+$body-color:                $white; //$gray-900 !default; custom
+$body-bg:                   $black; //$white !default; custom
 
 $body-secondary-color:      rgba($body-color, .75) !default;
 $body-secondary-bg:         $gray-200 !default;
@@ -471,7 +489,7 @@ $body-emphasis-color:       $black !default;
 //
 // Style anchor elements.
 
-$link-color:                              $secondary; //$primary !default; custom
+$link-color:                              $white; //$primary !default; custom
 $link-decoration:                         none ;//underline !default; custom
 $link-shade-percentage:                   20% !default;
 $link-hover-color:                        shift-color($link-color, $link-shade-percentage) !default;
@@ -682,6 +700,8 @@ $font-sizes: (
   60: $font-size-base * 3.75,   //60px
   64: $font-size-base * 4,      //64px
   96: $font-size-base * 6,      //96px
+  128: $font-size-base * 8,     //128px
+  400: $font-size-base * 25,    //400px
 ) !default;
 // scss-docs-end font-sizes
 
