updat about.html

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -33,6 +33,7 @@
 }
 
 .main-img{
+  display: block;
   transition: ease .8s;
   &:hover {
     box-shadow: 0px 0px 16px 8px rgba(143, 0, 255, 0.80);
