--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -10,7 +10,7 @@
       </div>
       <div class="col-12 col-lg-5 text-end align-self-center">
         <ul class="list-unstyled d-flex flex-column justify-content-end flex-lg-row align-items-start ">
-          <li class="mb-8 mb-lg-0"><a class="text-black pe-lg-12" href="#">關於我們</a></li>
+          <li class="mb-8 mb-lg-0"><a class="text-black pe-lg-12" href="about.html">關於我們</a></li>
           <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="#">產品資訊</a></li>
           <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="#">聯絡我們</a></li>
           <li class="mb-8 mb-lg-0"><a class="text-black ps-lg-12" href="#">隱私政策</a></li>
