--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -20,6 +20,7 @@
 @import "./utils/animation";
 @import "./utils/card";
 @import "./utils/border";
+@import "./utils/label";
 
 
 @import "./layout/container";
