--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -428,32 +428,33 @@ $spacers: (
   // 3: $spacer,
   // 4: $spacer * 1.5,
   // 5: $spacer * 3,
-  4: $spacer * .25,    //4px,
-  8: $spacer * .5,     //8px,
-  12: $spacer * .75,   //12px,
-  16: $spacer,         //16px,
-  18: $spacer * 1.125, //18px,
-  20: $spacer * 1.25,  //20px,
-  24: $spacer * 1.5,   //24px,
+  4: $spacer * .25,     //4px,
+  8: $spacer * .5,      //8px,
+  12: $spacer * .75,    //12px,
+  16: $spacer,          //16px,
+  18: $spacer * 1.125,  //18px,
+  20: $spacer * 1.25,   //20px,
+  24: $spacer * 1.5,    //24px,
   28: $spacer * 1.75,   //24px,
-  30: $spacer * 1.875, //30px,
-  32: $spacer * 2,     //32px,
-  36: $spacer * 2.25,  //36px,
-  40: $spacer * 2.5,   //40px,
-  48: $spacer * 3,     //48px,
-  52: $spacer * 3.25,  //52px,
-  56: $spacer * 3.5,   //56px,
-  60: $spacer * 3.75,  //60px,
-  64: $spacer * 4,     //64px,
-  72: $spacer * 4.5,   //72px,
-  76: $spacer * 4.75,  //76px,
-  80: $spacer * 5,     //80px,
-  96: $spacer * 6,     //96px,
-  128: $spacer * 8,    //128px,
-  136: $spacer * 8.5,  //136px,
-  144: $spacer * 9,    //144px,
-  160: $spacer * 10,   //160px,
-  400: $spacer * 25,   //400px,
+  30: $spacer * 1.875,  //30px,
+  32: $spacer * 2,      //32px,
+  36: $spacer * 2.25,   //36px,
+  40: $spacer * 2.5,    //40px,
+  48: $spacer * 3,      //48px,
+  52: $spacer * 3.25,   //52px,
+  56: $spacer * 3.5,    //56px,
+  60: $spacer * 3.75,   //60px,
+  64: $spacer * 4,      //64px,
+  72: $spacer * 4.5,    //72px,
+  76: $spacer * 4.75,   //76px,
+  80: $spacer * 5,      //80px,
+  96: $spacer * 6,      //96px,
+  128: $spacer * 8,     //128px,
+  136: $spacer * 8.5,   //136px,
+  144: $spacer * 9,     //144px,
+  160: $spacer * 10,    //160px,
+  172: $spacer * 10.75, //172px,
+  400: $spacer * 25,    //400px,
 ) !default;
 // scss-docs-end spacer-variables-maps
 
@@ -474,8 +475,8 @@ $position-values: (
 // Settings for the `<body>` element.
 
 $body-text-align:           null !default;
-$body-color:                $white; //$gray-900 !default; custom
-$body-bg:                   $black; //$white !default; custom
+$body-color:                $black; //$gray-900 !default; custom
+$body-bg:                   $white !default;
 
 $body-secondary-color:      rgba($body-color, .75) !default;
 $body-secondary-bg:         $gray-200 !default;
