--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -15,7 +15,7 @@
               <a class="nav-link text-white text-center" aria-current="page" href="#">產品</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">關於我們</a>
+              <a class="nav-link text-white text-center" href="about.html">關於我們</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white text-center" href="#">最新消息</a>
