--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,35 +1,27 @@
-
-
 @import "../../node_modules/bootstrap/scss/functions";
 @import "./helpers/variables";
 @import "../../node_modules/bootstrap/scss/variables-dark";
-
-// @import "./utils/custom-color";
 @import "./mixins/bg-gradient";
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
 // custom
-// @import "./helpers/utilities";
 @import "./utils/bg-color";
 @import "./base/reset";
 @import "./base/font";
 @import "./utils/text";
 @import "./utils/swiper";
-// @import "./utils/aos";
 @import "./utils/animation";
 @import "./utils/card";
 @import "./utils/border";
-@import "./utils/label";
-
+@import "./utils/link";
 
 @import "./layout/container";
 @import "./layout/nav";
-
 @import "./pages/index";
 
 
-@import "./base/test";
+// @import "./base/test";
 
 
 
