about us 偽類失效終於莫名的解了啊啊啊…

--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -449,6 +449,8 @@ $spacers: (
   76: $spacer * 4.75,   //76px,
   80: $spacer * 5,      //80px,
   96: $spacer * 6,      //96px,
+  100: $spacer * 6.25,  //100px,
+  120: $spacer * 7.5,   //120px,
   128: $spacer * 8,     //128px,
   136: $spacer * 8.5,   //136px,
   144: $spacer * 9,     //144px,
