--- a/assets/scss/utils/_text.scss
+++ b/assets/scss/utils/_text.scss
@@ -2,6 +2,9 @@
   .fs-md-400{
     font-size: 400px !important;
   }
+  .fs-md-128{
+    font-size: 128px !important;
+  }
   .fs-md-96{
     font-size: 96px !important;
   }
@@ -35,6 +38,9 @@
 }
 
 
+.letter-spacing-96{
+  letter-spacing: 96px;
+}
 .letter-spacing-48{
   letter-spacing: 48px;
 }
@@ -52,6 +58,9 @@
 }
 .letter-spacing-16{
   letter-spacing: 16px;
+}
+.letter-spacing-14{
+  letter-spacing: 14px;
 }
 .letter-spacing-5{
   letter-spacing: 0.48rem;
