--- a/assets/scss/utils/_link.scss
+++ b/assets/scss/utils/_link.scss
@@ -4,7 +4,7 @@
   display: inline-block;
   position: relative;
   color: #000;
-  // text-decoration: underline;
+  z-index: 5;
 
   &::after{
     content: "";
@@ -12,8 +12,24 @@
     height: 12px;
     background-color: #E9E2F3;
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
     z-index: -1;
+  }
+}
+
+.cu-pagination{
+  .current{
+    position: relative;
+
+    &::after{
+      content: "";
+      position: absolute;
+      width: 10px;
+      height: 1px;
+      background-color: $white;
+      bottom: 0;
+      right: 35%;
+    }
   }
 }
