--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -5,7 +5,7 @@
         <a class="d-block ff-shrikhand fs-32 text-black font-italic p-0" href="index.html">ALPHABOX+</a>
         <span class="fw-bold d-none d-lg-block">Copyright © 2023 Hexschool.</span>
       </div>
-      <div class="col-12 col-lg-2 mb-8 mb-lg-0">
+      <div class="col-12 col-lg-2 mb-8 mb-lg-0 text-lg-center">
         <img src="/assets/images/icons/emergency_b.svg" alt="emergency_b">
       </div>
       <div class="col-12 col-lg-5 text-end align-self-center">
