--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -18,7 +18,7 @@
               <a class="nav-link text-white text-center" href="about.html">關於我們</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">最新消息</a>
+              <a class="nav-link text-white text-center" href="newslist.html">最新消息</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white text-center" href="#">FAQ</a>
