--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse navbar-bg" id="navContent">
           <ul class="navbar-nav mx-lg-auto me-auto mb-8 mb-lg-0 gap-8 pt-16 pt-lg-0 gap-lg-16">
             <li class="nav-item">
-              <a class="nav-link text-white text-center" aria-current="page" href="#">產品</a>
+              <a class="nav-link text-white text-center" aria-current="page" href="">產品</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white text-center" href="about.html">關於我們</a>
@@ -21,19 +21,19 @@
               <a class="nav-link text-white text-center" href="newslist.html">最新消息</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">FAQ</a>
+              <a class="nav-link text-white text-center" href="faq.html">FAQ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">聯絡我們</a>
+              <a class="nav-link text-white text-center" href="contact.html">聯絡我們</a>
             </li>
           </ul>
 
           <ul class="navbar-nav gap-8 pb-32 pb-lg-0 gap-lg-16">
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">註冊</a>
+              <a class="nav-link text-white text-center" href="sign-up.html">註冊</a>
             </li>
             <li class="nav-item me-lg-16">
-              <a class="nav-link text-white text-center" href="#">登入</a>
+              <a class="nav-link text-white text-center" href="sign-in.html">登入</a>
             </li>
             <li class="nav-item d-flex justify-content-center">
               <a class="nav-link btn rounded-1 text-black text-center bg-white py-8 px-12" href="#">
