修正index 底圖路徑問題

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -48,7 +48,7 @@
 
 
 .banner-img {
-  background-image: url(../assets/images/carousel_background.png), radial-gradient(50% 50% at 50% 50%, #300871 0%, #000 100%);
+  background-image: url("/assets/images/carousel_background.png"), radial-gradient(50% 50% at 50% 50%, #300871 0%, #000 100%);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
