--- a/assets/scss/utils/_border.scss
+++ b/assets/scss/utils/_border.scss
@@ -73,7 +73,7 @@
   border-radius: 0 !important;
 }
 
-
+// custom2
 .border-dotted{
   border-bottom: 2px dotted $white;
 }
@@ -81,5 +81,24 @@
 .list-group.border-dotted{
   @include media-breakpoint-up(md){
     border-bottom: none;
+  }
+}
+
+.line-hover{
+  position: relative;
+  border-bottom: 2px solid $black;
+  @include media-breakpoint-up(md){
+    border-bottom: none;
+    &:hover{
+      &::after{
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: $black;
+      }
+    }
   }
 }
